--- a/app/src/main/res/layout/items_catalogo.xml
+++ b/app/src/main/res/layout/items_catalogo.xml
@@ -13,6 +13,8 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="8dp"
+        app:strokeWidth="0.5dp"
+        app:strokeColor="@color/grisOscuroColor"
         app:cardCornerRadius="10dp"
         app:cardElevation="4dp"
         app:cardForegroundColor="@android:color/transparent"
@@ -20,9 +22,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:strokeColor="@color/purple_200"
-        app:strokeWidth="1dp">
+        app:layout_constraintTop_toTopOf="parent" >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_detalle"
@@ -33,10 +33,6 @@
                 android:id="@+id/cl_titulo"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:background="@drawable/round_corner_view"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -68,12 +64,20 @@
                     android:layout_marginTop="1dp"
                     android:layout_marginEnd="2dp"
                     android:layout_marginBottom="1dp"
+                    android:contentDescription="@string/contentDescription"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/ic_add_circle"
-                    android:contentDescription="@string/contentDescription" />
+                    app:srcCompat="@drawable/ic_add_circle" />
 
+                <View
+                    android:id="@+id/v_separador"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:background="@color/grisOscuroColor"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
