Se agrego imagen (er_pedido.png) en assets Version 1.0.8

--- a/app/src/main/res/layout/items_carrito.xml
+++ b/app/src/main/res/layout/items_carrito.xml
@@ -35,6 +35,7 @@
             android:layout_width="48dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
+            android:contentDescription="@string/contentDescription"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -46,6 +47,7 @@
             android:layout_width="48dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
+            android:contentDescription="@string/contentDescription"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -58,7 +60,7 @@
             android:layout_marginBottom="8dp"
             android:fontFamily="@font/roboto_condensed_regular"
             android:gravity="center"
-            android:text="1"
+            android:text="@string/_1"
             android:textColor="@color/colorPrimaryText"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -74,7 +76,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
-        android:text="Importe"
+        android:text="@string/importe"
         android:textSize="16sp"
         android:fontFamily="@font/roboto_condensed_regular"
         android:textColor="@color/purple_500"
@@ -91,6 +93,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
         android:src="@drawable/ic_remove_circle"
+        android:contentDescription="@string/contentDescription"
         app:layout_constraintBottom_toTopOf="@+id/v_separador"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_descripcion" />
