Se agrego StateFlow, actualizacion del gradle a kts, reorganizacion de los paquetes, actualizacion del dao, entre otras mejoras

--- a/app/src/main/res/layout/activity_registrar_producto.xml
+++ b/app/src/main/res/layout/activity_registrar_producto.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorFondoVentana"
-    tools:context=".ui.activity.registrarproducto.RegistrarProductoActivity">
+    tools:context=".ui.registrarproducto.RegistrarProductoActivity">
 
     <include layout="@layout/layout_editar_solo_fondo" />
 
@@ -19,11 +19,11 @@
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:contentDescription="@string/contentDescripcion"
             android:insetLeft="0dp"
             android:insetTop="0dp"
             android:insetRight="0dp"
             android:insetBottom="0dp"
+            android:contentDescription="@string/contentDescripcion"
             app:icon="@drawable/ic_atras"
             app:iconGravity="textStart"
             app:iconTint="@color/white"
@@ -50,7 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="@string/subtitulo"
+            android:text="@string/producto"
             android:textColor="@color/colorTransparente_80"
             android:textSize="17sp"
             app:layout_constraintEnd_toEndOf="parent"
